# ava-whatsapp-agent

./: .env.example  .gitignore  AGENT_SEARCH_INTEGRATION.md  AUTOMATIC_INTERACTIVE_MESSAGES.md  BINARY_QUESTION_FIX.md  CAROUSEL_IMPLEMENTATION_SUMMARY.md  CHANGE_CAROUSEL_TO_LIST.md  CONVERSATION_STATE_INTEGRATION.md  CONVERSATION_STATE_QUICKSTART.md  CONVERSATION_STATE_SUMMARY.md  DELIVERY_COST_CALCULATION.md  Dockerfile  HYBRID_AI_MESSAGES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PHONE_NUMBER_FIX.md  SEARCH_DISABLED_SUMMARY.md  SEARCH_INTEGRATION_GUIDE.md  TRACK_ORDER_STATUS.md  WHATSAPP_INTERACTIVE_MESSAGES_GUIDE.md  ZONE_BASED_DELIVERY_IMPLEMENTATION.md  pyproject.toml  test_api_simple.py  test_cartaai_api.py  test_manual_messages.py
.claude/: settings.local.json
docs/: ARCHITECTURE_COMPARISON.md  ASYNC_MIGRATION_COMPLETE.md  BUTTON_TITLE_VALIDATION.md  CAROUSEL_FIX_COMPLETE.md  CAROUSEL_FLOW_DIAGRAM.md  CAROUSEL_FLOW_IMPLEMENTATION.md  CAROUSEL_IMAGE_HANDLING.md  CAROUSEL_IMPLEMENTATION_COMPLETE.md  CAROUSEL_INTEGRATION_GUIDE.md  CAROUSEL_MESSAGES.md  CAROUSEL_QUICK_START.md  CARTAAI_API_SETUP.md  CARTAAI_API_TEST_REPORT.md  CART_ARCHITECTURE.md  CART_SYSTEM_SUMMARY.md  CATEGORY_SELECTION_FIX.md  COMPREHENSIVE_MIGRATION_PLAN.md  CONVERSATION_SYNC_CODE_SNIPPETS.md  CONVERSATION_SYNC_INTEGRATION.md  DEEP_LINK_FIX.md  DEEP_LINK_FLOW_VISUAL.md  ECOMMERCE_INTEGRATION.md  FIX_PRICE_FIELD_ERROR.md  HOW_INTERACTIVE_MESSAGES_WORK.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  IMPORT_MIGRATION_STATUS.md  INDEX_ANALYSIS.md  INTEGRATION_SUMMARY.md  (+35 more)
(+84 files in other folders)
