[project]
name = "ai-companion"
version = "0.1.0"
description = "Your own AI buddy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=1.3.2",
    "elevenlabs>=1.50.3",
    "fastapi[standard]>=0.115.6",
    "groq>=0.13.1",
    "langchain-community>=0.3.13",
    "langchain-groq>=0.2.2",
    "langchain>=0.3.13",
    "pydantic==2.10.0",
    "together>=1.3.10",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.14",
    "pydantic-settings>=2.7.0",
    "pre-commit>=4.0.1",
    "supabase>=2.11.0",
    "langgraph-checkpoint-duckdb>=2.0.1",
    "duckdb>=1.1.3",
    "langgraph-checkpoint-sqlite>=2.0.1",
    "aiosqlite>=0.20.0",
    # Qdrant client - use version compatible with NumPy 1.x
    "qdrant-client>=1.12.0,<1.13.0",
    "sentence-transformers>=3.3.1",
    # MongoDB support for multi-business
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "cryptography>=41.0.0",
    # Production optimizations
    "slowapi>=0.1.9",  # Rate limiting
    "redis>=5.0.0",  # Optional: for distributed caching
    # NumPy compatibility - keep at 1.x for PyTorch compatibility
    # Current stable PyTorch versions (2.x) are compiled against NumPy 1.x
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E501"]
